--- a/templates/business/_entry.twig
+++ b/templates/business/_entry.twig
@@ -78,8 +78,14 @@
                     <!-- Address -->
                     {% set businessAddress = entry.businessAddress.one() %}
                     {% if businessAddress %}
-                        <div>
-                            <p class="text-gray-900 font-semibold whitespace-pre-line">{{ businessAddress | address }}</p>
+                        <div class="flex items-start">
+                            <svg class="w-4 h-4 text-gray-500 mt-0.5 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                            </svg>
+                            <span class="text-gray-900 font-semibold">
+                                {{ businessAddress.addressLine1 }}{% if businessAddress.addressLine2 %}<br>{{ businessAddress.addressLine2 }}{% endif %}<br>{{ businessAddress.locality }}, {{ businessAddress.administrativeArea }} {{ businessAddress.postalCode }}
+                            </span>
                         </div>
                     {% endif %}
                 </div>
