--- a/templates/business/signup.twig
+++ b/templates/business/signup.twig
@@ -18,7 +18,7 @@
 			</div>
 		</div>
 
-		{% set form = craft.freeform.form('businessSignup') %}
+		{% set form = craft.freeform.form('businessSignUp') %}
 
 		{% if form %}
 			{{ form.render({
