--- a/templates/freeform/formatting/business-signup.twig
+++ b/templates/freeform/formatting/business-signup.twig
@@ -59,10 +59,8 @@
 					{% set isSelect = field.type == 'select' or field.type == 'dropdown' %}
 					{% set isSubmit = field.type == 'submit' %}
 
-					{% if isSubmit %}
-						{% continue %}
-
-					{% elseif isCheckbox %}
+					{% if not isSubmit %}
+					{% if isCheckbox %}
 						<div class="flex items-start">
 							<div class="flex items-center h-5">
 								<input type="checkbox" id="{{ field.idAttribute }}" name="{{ field.handle }}" value="1" {{ field.required ? 'required' : '' }} class="focus:ring-blue-500 h-4 w-4 text-blue-600 border-gray-300 rounded">
@@ -168,6 +166,7 @@
 								</div>
 							{% endif %}
 						</div>
+					{% endif %}
 					{% endif %}
 				{% endfor %}
 			{% endif %}
