--- a/templates/business/signup.twig
+++ b/templates/business/signup.twig
@@ -3,7 +3,7 @@
 {% set title = "Business Signup - FREE" %}
 
 {% block content %}
-<div class="max-w-md mx-auto mt-8 mb-16">
+<div class="max-w-3xl mx-auto mt-8 mb-16 px-4 sm:px-6">
 	<div class="bg-white rounded-lg shadow-md p-8">
 		<div class="text-center mb-8">
 			<div class="mx-auto w-16 h-16 bg-green-100 rounded-full flex items-center justify-center mb-4">
