--- a/templates/_layouts/base.twig
+++ b/templates/_layouts/base.twig
@@ -182,6 +182,9 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
             <div class="text-center">
                 <p>&copy; {{ "now"|date('Y') }} {{ siteName }}. All rights reserved.</p>
+                <p class="mt-2">
+                    <a href="/privacy" class="text-blue-400 hover:text-blue-300 transition-colors">Privacy Policy</a>
+                </p>
             </div>
         </div>
     </footer>
